# bookstore_test

./: README.md  db.sqlite3  pyproject.toml
bookstore/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py
product/serializers/: product_serializer.py
product/tests/test_viewset/: test_product_viewset.py
